# Pi_Project

./: CMakeLists.txt  LaneDetector.cpp  LaneDetector.hpp  compile.sh  crosswalk_detection.cpp  imgage_processing.h  main  main.cpp  motion.cpp  motion.hpp  sensors_controll.cpp  task1_hw_4  task1_hw_4.cpp  task2_hw_4  task2_hw_4.cpp  task3_hw_4  traffic_light.cpp  traffic_light.hpp  traffic_light_sensor.cpp  traffic_sign.cpp  zebra_recognition_demo.cpp  zebra_recognition_demo_fun.cpp
include/: CascadeUtil.h  LaneDetector.hpp  config  config_reader.h  motion.hpp  traffic_light.hpp  traffic_sign.h
src/: CascadeUtil.cpp  CascadeUtil.h  LaneDetector.cpp  ShapeDetector.cpp  ShapeDetector.h  config  config_reader.cpp  main.cpp  matching.cpp  motion.cpp  sensors_controll.cpp  traffic_light.cpp  traffic_sign.cpp  traffic_sign.h  traffic_sign_by_classifier.cpp  traffic_sign_by_color.cpp  traffic_sign_by_color_demo.cpp
src/cascades/: cascade_left.xml  cascade_parking.xml  cascade_pedestrian.xml  cascade_right.xml  cascade_stop.xml  stop.xml
